--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
 SITE_NAME_HEADER=Age of Ascension
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL=
+SITE_BASE_URL=https://age-of-ascension.netlify.app/
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
-NOTE_ICON_FILETREE=false
+NOTE_ICON_FILETREE=true
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app show-view-header Heading is-maximized outliner-plugin-dnd css-settings-manager sizing-readable sidebar-float-bottom check-color check-bg pathfinder is-focused
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app outliner-plugin-dnd css-settings-manager Heading minimal-theme minimal-default-light links-int-on links-ext-on minimal-folding minimal-readable-off img-grid colorful-active colorful-headings minimal-light minimal-dark chart-default-width table-default-width img-default-width iframe-default-width map-default-width is-maximized minimal-macos-dark sizing-readable sidebar-float-bottom paper lig check-color check-bg tag-text tables-center embed-clean embed-dark-background pathfinder breadcrumbs-block is-focused
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/SlRvb/Obsidian--ITS-Theme/HEAD/theme.css
 BASE_THEME=dark
